Fix hover contrast and padding in complementary nav icons

--- a/app/assets/stylesheets/hera/modules/navigation/_navigation.scss
+++ b/app/assets/stylesheets/hera/modules/navigation/_navigation.scss
@@ -174,6 +174,17 @@ header {
           &:focus,
           &:hover {
             color: $instance-nav-hover;
+
+            &.change-project-link {
+              text-decoration: underline;
+            }
+          }
+        }
+
+        @media (min-width: 992px) {
+          .nav-link {
+            padding-left: 0;
+            padding-right: 0;
           }
         }
       }
