--- a/app/assets/stylesheets/hera/variables.scss
+++ b/app/assets/stylesheets/hera/variables.scss
@@ -31,7 +31,7 @@ $text-small: 0.9rem;
 // Navbar
 $instance-nav-bg: $brand-200;
 $instance-nav-border: $brand-400;
-$instance-nav-hover: $brand-600;
+$instance-nav-hover: $brand-900;
 $instance-nav-links: $brand-800;
 $navbar-height: 3.375rem;
 
